--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,11 @@
-.tablink {
-    background-color: #555;
-    color: white;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    font-size: 17px;
-    width: 25%;
-    margin-right: 20px;
-
-  }
+.redback
+{
+background-color: red;
+opacity: 1;
+color: white;
+}
+.orback
+{
+background-color: black;
+color: white;
+}
