--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<h1>Angular 7 Routing Demo</h1> 
-<nav> 
-   <button class="tablink" routerLink = "/">Home</button>
-    <button class="tablink" routerLink = "/bind">Part 1 </button> 
-    <button class="tablink" routerLink = "/dir">Part 2</button>
-</nav> 
-<hr style="margin-top: 90px;">
+
+<nav mat-tab-nav-bar style="background-color: black;margin-bottom: 20px; border-top: 3px solid black;">
+    <a mat-tab-link [routerLink] = "item.route" [active]="item.active"
+     *ngFor="let item of header; let i = index" (click)="changeActive(i)" [id]="item.name"
+     [ngClass]="item.active ? 'redback' : 'orback'"> {{item.name}} </a>
+  </nav>
 <router-outlet></router-outlet>
